test/libhyperion/syntaxTests/pragma/experimental_hyperion_out_of_order_1.hyp
contract A {}

pragma experimental hyperion;
// ----
// ParserError 8185: (45-45): Experimental pragma "hyperion" can only be set at the beginning of the source unit.
